codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_border_in_light_and_dark_palettes.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
(255, 255, 255):
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 6 },
    content: [
        "╭──────────────────────────────────────────╮    ",
        "│ >_ Shortcut (vtest)                      │    ",
        "│                                          │    ",
        "│ model:     test-model   /model to change │    ",
        "│ directory: project                       │    ",
        "╰──────────────────────────────────────────╯    ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 1, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 2, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 26, y: 3, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 3, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 4, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(0, 112, 64), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
(18, 20, 30):
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 6 },
    content: [
        "╭──────────────────────────────────────────╮    ",
        "│ >_ Shortcut (vtest)                      │    ",
        "│                                          │    ",
        "│ model:     test-model   /model to change │    ",
        "│ directory: project                       │    ",
        "╰──────────────────────────────────────────╯    ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 1, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 2, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 26, y: 3, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 3, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 4, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(74, 222, 128), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
