codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__user_image_labels_follow_the_painted_prompt_surface.snap
---
source: tui/src/history_cell/tests.rs
expression: "snapshots.join(\"\\n\")"
---
(255, 255, 255): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "                                ",
        "  [Image #2]                    ",
        "                                ",
        "› [Image #1] describe these     ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(0, 112, 64), bg: Rgb(224, 250, 238), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Rgb(224, 250, 238), underline: Reset, modifier: BOLD | DIM,
        x: 2, y: 3, fg: Rgb(0, 112, 64), bg: Rgb(224, 250, 238), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Rgb(224, 250, 238), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
(18, 20, 30): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "                                ",
        "  [Image #2]                    ",
        "                                ",
        "› [Image #1] describe these     ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(74, 222, 128), bg: Rgb(24, 44, 41), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Rgb(24, 44, 41), underline: Reset, modifier: BOLD | DIM,
        x: 2, y: 3, fg: Rgb(74, 222, 128), bg: Rgb(24, 44, 41), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Rgb(24, 44, 41), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
(95, 95, 95): Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 5 },
    content: [
        "                                ",
        "  [Image #2]                    ",
        "                                ",
        "› [Image #1] describe these     ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(200, 245, 216), bg: Rgb(92, 110, 98), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Rgb(92, 110, 98), underline: Reset, modifier: BOLD | DIM,
        x: 2, y: 3, fg: Rgb(200, 245, 216), bg: Rgb(92, 110, 98), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Rgb(92, 110, 98), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
